syntax = "proto3";
package proto;
option java_package = "generated";

// Msg Handler with lamport clocks support.
service lamportMsgHandler{
    rpc getValue(Get) returns (Empty);
    rpc putValue(Put) returns (Empty);
    rpc ackEvent(Ack) returns (Empty);
}

message Get{
    int32 pid = 1;
    int64 clock = 2;
    int64 event_id = 3; 
    int64 key = 4;
}

message Put{
    int32 pid = 1;
    int64 clock = 2;
    int64 event_id = 3; 
    int64 key = 4;
    string value = 5;

}

message Ack{
    int32 pid = 1;
    int64 clock = 2;
    int64 event_id = 3; 
}

message Empty{

}